colab notebook created

--- a/nbody_lecture_colab.ipynb
+++ b/nbody_lecture_colab.ipynb
@@ -93,122 +93,7 @@
     "   - **Besonderheiten:**\n",
     "     - Berechnung stabiler Kepler-Orbits sowie chaotischer Bewegungen durch das Hinzufügen eines dritten Körpers (3-Körper-Problem).\n",
     "     - Visualisierung der beiden Szenarien und Animation des Systems.\n",
-    "     - **Code-Ausschnitt:** Lösung der Bewegungsgleichungen und Visualisierung der Trajektorien der Körper.\n",
-    "\n",
-    "### 5. **HTML-CSS-Modifikationen für Jupyter Notebooks**\n",
-    "   In diesem Notebook habe ich ein paar Anpassungen der Jupyter Notebook-Oberfläche vorgenommen, um bestimmte UI-Elemente von `matplotlib` zu verbergen.\n",
-    "   - **Verwendete Libraries:**\n",
-    "     - HTML und CSS zur Anpassung der Darstellung.\n",
-    "   - **Besonderheiten:**\n",
-    "     - Einfache CSS-Anpassungen zum Ausblenden von UI-Komponenten wie Schaltflächen und Dialog-Titelleisten."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "### Einstellungen für die Darstellung interaktiver Plots"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "Dieser HTML-Code versteckt die Titelleiste von Dialogfenstern, die mit der **jQuery UI Dialog**-Komponente erstellt wurden.\n",
-    "\n",
-    "### Erklärung:\n",
-    "- **`div.ui-dialog-titlebar`**: Dieser Selektor zielt auf das Element ab, das die Titelleiste des Dialogs darstellt. In jQuery UI Dialogen wird die Titelleiste standardmäßig als `div` mit der Klasse `ui-dialog-titlebar` dargestellt.\n",
-    "  \n",
-    "- **`{display: none;}`**: Dieser CSS-Stil sorgt dafür, dass das ausgewählte Element (`div.ui-dialog-titlebar`) nicht angezeigt wird. Das bedeutet, die Titelleiste des Dialogs wird **versteckt**."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "code_folding": [
-     0
-    ],
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "div.ui-dialog-titlebar {display: none;}\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%html\n",
-    "<style>\n",
-    "div.ui-dialog-titlebar {display: none;}\n",
-    "</style>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "Dieser HTML-Code blendet zwei verschiedene Elemente auf einer Webseite aus:\n",
-    "\n",
-    "### Erklärung:\n",
-    "1. **`button.btn.btn-default`**:\n",
-    "   - **`.output_wrapper button.btn.btn-default`**: Dieser Selektor spricht Schaltflächen (`button`), die sowohl die Klasse `btn` als auch die Klasse `btn-default` innerhalb eines Containers mit der Klasse `output_wrapper` besitzen. Diese Schaltflächen sind oft in Jupyter Notebooks zu finden, z. B. bei der Schaltfläche zum Ausführen von Zellen oder anderen UI-Elementen.\n",
-    "   - **`display: none;`**: Dieser CSS-Stil versteckt die ausgewählten Schaltflächen vollständig, sodass sie nicht auf der Seite angezeigt werden.\n",
-    "\n",
-    "2. **`.ui-dialog-titlebar`**:\n",
-    "   - **`.output_wrapper .ui-dialog-titlebar`**: Dieser Selektor spricht die Titelleiste eines Dialogs an, der in einem Container mit der Klasse `output_wrapper` erscheint. Diese Titelleiste ist typischerweise Bestandteil von Dialogfenstern, die mit jQuery UI oder ähnlichen UI-Frameworks erstellt werden.\n",
-    "   - **`display: none;`**: Dieser CSS-Stil blendet auch diese Titelleiste aus, sodass sie nicht sichtbar ist."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "code_folding": [
-     0
-    ],
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%html\n",
-    "<style>\n",
-    ".output_wrapper button.btn.btn-default,\n",
-    ".output_wrapper .ui-dialog-titlebar {\n",
-    "  display: none;\n",
-    "}\n",
-    "</style>"
+    "     - **Code-Ausschnitt:** Lösung der Bewegungsgleichungen und Visualisierung der Trajektorien der Körper."
    ]
   },
   {
@@ -745,7 +630,7 @@
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {
-    "hideCode": true,
+    "hideCode": false,
     "hidePrompt": true
    },
    "outputs": [
@@ -1762,6 +1647,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
+    "from matplotlib import rc\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['animation.embed_limit'] = 2**128\n",
     "\n",
     "# Constants\n",
     "G, M, m = 1, 1, 1  # Gravitational constant, central mass, orbiting mass\n",
@@ -1850,7 +1738,8 @@
     "# Animate\n",
     "ani = animation.FuncAnimation(fig, update, frames=steps, interval=30, blit=False)\n",
     "\n",
-    "plt.show()\n"
+    "rc('animation', html='jshtml')\n",
+    "ani    # or HTML(anim.to_jshtml())"
    ]
   },
   {
@@ -1870,7 +1759,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "hideCode": true,
+    "hideCode": false,
     "hidePrompt": true,
     "slideshow": {
      "slide_type": "-"
@@ -2891,6 +2780,9 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
     "from scipy.integrate import solve_ivp\n",
+    "from matplotlib import rc\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['animation.embed_limit'] = 2**128\n",
     "\n",
     "# ---------------------------\n",
     "# PARAMETERS\n",
@@ -3056,7 +2948,8 @@
     "#ani = animation.FuncAnimation(fig, update, frames=len(t_eval),\n",
     "#                              init_func=init, interval=5, blit=False)\n",
     "\n",
-    "plt.show()\n"
+    "rc('animation', html='jshtml')\n",
+    "ani    # or HTML(anim.to_jshtml())"
    ]
   },
   {
@@ -3103,9 +2996,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "hidePrompt": true,
     "slideshow": {
      "slide_type": "notes"
@@ -3119,6 +3010,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
+    "from matplotlib import rc\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['animation.embed_limit'] = 2**128\n",
     "\n",
     "# Physikalische Konstanten\n",
     "g = 9.81\n",
@@ -3198,7 +3092,8 @@
     "\n",
     "ani = animation.FuncAnimation(fig, update, frames=num_steps // skip_frames, interval=3, blit=True)\n",
     "#plt.legend()\n",
-    "plt.show()\n"
+    "rc('animation', html='jshtml')\n",
+    "ani    # or HTML(anim.to_jshtml())"
    ]
   },
   {
@@ -3313,7 +3208,7 @@
    "execution_count": 11,
    "metadata": {
     "code_folding": [],
-    "hideCode": true,
+    "hideCode": false,
     "hidePrompt": true,
     "slideshow": {
      "slide_type": "-"
@@ -4334,6 +4229,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
+    "from matplotlib import rc\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['animation.embed_limit'] = 2**128\n",
     "\n",
     "# --- Constants ---\n",
     "G = 1.0    # Gravitational constant\n",
@@ -4467,7 +4365,8 @@
     "# --- Create Animation ---\n",
     "ani = animation.FuncAnimation(fig, update, frames=num_steps, interval=5, blit=False)\n",
     "\n",
-    "plt.show()\n"
+    "rc('animation', html='jshtml')\n",
+    "ani    # or HTML(anim.to_jshtml())"
    ]
   },
   {
@@ -4933,7 +4832,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "hideCode": true,
+    "hideCode": false,
     "hidePrompt": true
    },
    "outputs": [
@@ -5952,6 +5851,10 @@
     "import jax.random as random\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
+    "from matplotlib import rc\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['animation.embed_limit'] = 2**128\n",
+    "\n",
     "from jax import jit\n",
     "import jax.lax\n",
     "from functools import partial\n",
@@ -6152,7 +6055,8 @@
     "ani = animation.FuncAnimation(fig, lambda f: update(frame_indices[int(f)]),\n",
     "                              frames=len(frame_indices),\n",
     "                              init_func=init, interval=5, blit=False)\n",
-    "plt.show()\n"
+    "rc('animation', html='jshtml')\n",
+    "ani    # or HTML(anim.to_jshtml())"
    ]
   },
   {
@@ -6363,7 +6267,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "hideCode": true,
+    "hideCode": false,
     "hidePrompt": true,
     "slideshow": {
      "slide_type": "-"
@@ -6385,6 +6289,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
+    "from matplotlib import rc\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['animation.embed_limit'] = 2**128\n",
     "\n",
     "# Parameter des logarithmischen Halo-Potentials\n",
     "v0 = 1.0\n",
@@ -6452,7 +6359,8 @@
     "    return scatter,\n",
     "\n",
     "ani = animation.FuncAnimation(fig, update, frames=n_steps, interval=20, blit=True)\n",
-    "plt.show()\n"
+    "rc('animation', html='jshtml')\n",
+    "ani    # or HTML(anim.to_jshtml())"
    ]
   },
   {
@@ -7929,6 +7837,10 @@
     "import jax.random as random\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
+    "from matplotlib import rc\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['animation.embed_limit'] = 2**128\n",
+    "\n",
     "from matplotlib.widgets import Slider\n",
     "from jax import jit\n",
     "import jax.lax\n",
@@ -8131,7 +8043,8 @@
     "# Connect slider to update function\n",
     "slider.on_changed(slider_update)\n",
     "\n",
-    "plt.show()\n"
+    "rc('animation', html='jshtml')\n",
+    "ani    # or HTML(anim.to_jshtml())"
    ]
   },
   {
@@ -9255,6 +9168,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
+    "from matplotlib import rc\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['animation.embed_limit'] = 2**128\n",
     "\n",
     "# Parameter\n",
     "num_pendulums = 5  # Anzahl der Massen\n",
@@ -9306,7 +9222,8 @@
     "    lines.set_data(x_positions, y_list[frame])  # Massen bewegen sich nur vertikal\n",
     "\n",
     "ani = animation.FuncAnimation(fig, update, frames=num_steps, interval=20)\n",
-    "plt.show()\n"
+    "rc('animation', html='jshtml')\n",
+    "ani    # or HTML(anim.to_jshtml())"
    ]
   },
   {
@@ -9544,7 +9461,7 @@
     "plt.title(\"Planetenbahnen mit Leapfrog-Algorithmus\")\n",
     "plt.legend()\n",
     "plt.grid()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -10569,6 +10486,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
+    "from matplotlib import rc\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['animation.embed_limit'] = 2**128\n",
     "\n",
     "# Gravitationskonstante in normierten Einheiten (G * M_sun = 4π²)\n",
     "G = 4 * np.pi**2\n",
@@ -10668,7 +10588,8 @@
     "    return updated_artists\n",
     "\n",
     "ani = animation.FuncAnimation(fig, update, frames=steps, interval=1, blit=True)\n",
-    "plt.show()\n"
+    "rc('animation', html='jshtml')\n",
+    "ani    # or HTML(anim.to_jshtml())"
    ]
   },
   {
@@ -11855,6 +11776,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
+    "from matplotlib import rc\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['animation.embed_limit'] = 2**128\n",
+    "\n",
     "from scipy.integrate import solve_ivp\n",
     "\n",
     "G = 1  # Gravitational constant\n",
@@ -11915,100 +11840,13 @@
     "    return scat_reg, scat_chaos\n",
     "\n",
     "ani = animation.FuncAnimation(fig, update, frames=len(sol_reg.t), interval=30)\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "# random code snippets..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# just some random code snipped in case you want to put \n",
-    "# a plot next to markdown text in a jupter notebook...\n",
-    "%matplotlib inline\n",
-    "from ipywidgets import widgets, Layout\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "left_widget = widgets.Output()\n",
-    "def func(x, a, b, c, d):\n",
-    "    return a + b*np.exp(c*x + d)\n",
-    "\n",
-    "the_x = np.arange(0, 10, 0.5)\n",
-    "the_y = func(the_x, 1, 1, -1, 2)\n",
-    "\n",
-    "with left_widget:\n",
-    "    fig, ax = plt.subplots()\n",
-    "    ax.plot(the_x, the_y)\n",
-    "    plt.show(fig)\n",
-    "\n",
-    "len_x = len(the_x)\n",
-    "\n",
-    "md_content = f\"\"\"There are {len_x} **elements** of both `the_x`, and `the_y`;\n",
-    "Those values are plotted on the diagram on the left\"\"\"\n",
-    "\n",
-    "box_layout = Layout(display='flex',\n",
-    "                    flex_flow='row',\n",
-    "                    justify_content='space-around',\n",
-    "                    width='auto'\n",
-    "                   )\n",
-    "\n",
-    "def simple_markdown_to_html(text):\n",
-    "    # Handle bold text\n",
-    "    text = text.replace('**', '<strong>', 1).replace('**', '</strong>', 1)\n",
-    "    # Handle inline code\n",
-    "    while '`' in text:\n",
-    "        text = text.replace('`', '<code>', 1).replace('`', '</code>', 1)\n",
-    "    return text\n",
-    "\n",
-    "html_content = simple_markdown_to_html(md_content)\n",
-    "\n",
-    "markdown_widget = widgets.HTML(\n",
-    "    value=f\"\"\"\n",
-    "    <style>\n",
-    "    .markdown-body {{\n",
-    "        font-family: Arial, sans-serif;\n",
-    "        padding: 10px;\n",
-    "    }}\n",
-    "    .markdown-body strong {{\n",
-    "        font-weight: bold;\n",
-    "    }}\n",
-    "    .markdown-body code {{\n",
-    "        background-color: #f0f0f0;\n",
-    "        padding: 2px 4px;\n",
-    "        border-radius: 3px;\n",
-    "        font-family: monospace;\n",
-    "    }}\n",
-    "    </style>\n",
-    "    <div class=\"markdown-body\">\n",
-    "    {html_content}\n",
-    "    </div>\n",
-    "    \"\"\"\n",
-    ")\n",
-    "\n",
-    "hbox1 = widgets.Box(children=[markdown_widget, left_widget], layout=box_layout)\n",
-    "display(hbox1)"
+    "rc('animation', html='jshtml')\n",
+    "ani    # or HTML(anim.to_jshtml())"
    ]
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
+  "celltoolbar": "Hide code",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
