some minor changes

--- a/lehrprobe.ipynb
+++ b/lehrprobe.ipynb
@@ -247,7 +247,7 @@
     "\n",
     "<br>\n",
     "<br>\n",
-    "<center> Lecture slides and additonal material available on <a href=\"https://github.com/TobiBu/Nbody-lecture\">Github</a> <center>\n",
+    "<center> Vorlesungsfolien und zusätzliches Material online verfügbar auf <a href=\"https://github.com/TobiBu/Nbody-lecture\">Github</a> <center>\n",
     "    \n",
     "\n",
     "<center>\n",
@@ -3131,7 +3131,7 @@
     "1. **Nichtlineare Wechselwirkungen** $\\rightarrow$ Keine analytischen Lösungen.\n",
     "2. **Chaotisches Verhalten** $\\rightarrow$ Hohe Sensitivität gegenüber Anfangsbedingungen.\n",
     "\n",
-    "**$\\rightarrow$ Approximationen oder numerische Simulationen erforderlich.**"
+    "**$\\rightarrow$ Akkurate numerische Simulationen erforderlich!**"
    ]
   },
   {
@@ -4261,38 +4261,6 @@
     "ani = animation.FuncAnimation(fig, update, frames=num_steps // skip_frames, interval=3, blit=True)\n",
     "#plt.legend()\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Konsequenzen der Nicht-Linearität\n",
-    "\n",
-    "- **Bahnstörungen und Instabilitäten:**\n",
-    "  - Merkur auf Zeitskalen von $1-3$ Gyr instabil\n",
-    "  - Bahnvariationen der inneren Planeten auf Skalen von $\\sim10^4$ Jahren "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- **Resonanzen:** \n",
-    "   -  nicht gleichmäßige Verteilung von Asteroiden auf Grund von Jupiter\n",
-    "<center>\n",
-    "<img src=\"img/resonanz.png\" width=\"550\"/>\n",
-    "<center>\n",
-    "    \n",
-    "Abbildung von [Michael Oestreicher, Das Mehrkörperproblem in der Astronomie](https://de.m.wikibooks.org/wiki/Das_Mehrkörperproblem_in_der_Astronomie/_Druckversion)\n"
    ]
   },
   {
@@ -5545,6 +5513,38 @@
     "<center>\n",
     "<img src=\"./img/chaos.gif\" width=\"1750\" align=\"center\">\n",
     "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Konsequenzen der Nicht-Linearität\n",
+    "\n",
+    "- **Bahnstörungen und Instabilitäten:**\n",
+    "  - Merkur auf Zeitskalen von $1-3$ Gyr instabil\n",
+    "  - Bahnvariationen der inneren Planeten auf Skalen von $\\sim10^4$ Jahren "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- **Resonanzen:** \n",
+    "   -  nicht gleichmäßige Verteilung von Asteroiden auf Grund von Jupiter\n",
+    "<center>\n",
+    "<img src=\"img/resonanz.png\" width=\"550\"/>\n",
+    "<center>\n",
+    "    \n",
+    "Abbildung von [Michael Oestreicher, Das Mehrkörperproblem in der Astronomie](https://de.m.wikibooks.org/wiki/Das_Mehrkörperproblem_in_der_Astronomie/_Druckversion)\n"
    ]
   },
   {
@@ -7268,9 +7268,9 @@
     "\n",
     "| **System**                | **Anzahl an Teilchen** | **Überquerungszeit** | **Relaxationszeit**      | **Kollisionslos über Hubblezeit?** |\n",
     "|---------------------------|-----------------------|-------------------|--------------------------|------------------------------------------|\n",
-    "| Kugelsternhaufen     | $10^5$             | 0.5 Myr           | 0.5 Gyr                  | No                                       |\n",
-    "| Sterne in Galaxie   | $10^{11}$          | $100$ Myr       | $5\\times10^{6} \\, t_{\\rm{Universe}}$           | Yes                                      |\n",
-    "| Dunkle Materie in Galaxie     | $10^{10}$          | $100$ Myr       | $10^{73} \\, t_{\\rm{Universe}}$ | Absolutely                               |\n"
+    "| Kugelsternhaufen     | $10^5$             | 0.5 Myr           | 0.5 Gyr                  | Nein                                       |\n",
+    "| Sterne in Galaxie   | $10^{11}$          | $100$ Myr       | $5\\times10^{6} \\, t_{\\rm{Universe}}$           | Ja                                      |\n",
+    "| Dunkle Materie in Galaxie     | $10^{77}$          | $1$ Gyr       | $10^{73} \\, t_{\\rm{Universe}}$ | Absolut!                               |\n"
    ]
   },
   {
@@ -7289,27 +7289,34 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "source": [
-    "**Phasenraumdichte** Sei $\\mathbf{w}=(\\mathbf{x}, \\mathbf{v})$ der Phasenraumvektor. \n",
-    "$f(\\mathbf{w}, t)=f(\\mathbf{x}, \\mathbf{v}, t)$: Anzahl der Teilchen in einem infinitesimalen Volumen $\\mathrm{d}^3x \\, \\mathrm{d}^3v$ \n",
-    "\n",
-    "$$\n",
-    "\\mathrm{d} N(\\mathbf{x}, \\mathbf{v}, t)\\propto f(\\mathbf{x}, \\mathbf{v}, t) \\mathrm{d}^3x \\, \\mathrm{d}^3v\n",
-    "$$ \n",
-    "\n",
-    "$\\rightarrow$ Mit geeigneter Normalisierung beschreibt $f(\\mathbf{w})$ eine Wahrscheinlichkeitsfunktion."
+    "Sei $\\mathbf{w}=(\\mathbf{x}, \\mathbf{v})$ der Phasenraumvektor."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "**Phasenraumdichte** \n",
+    "$f(\\mathbf{x}, \\mathbf{v}, t)$: Anzahl der Teilchen in einem infinitesimalen Volumen $\\mathrm{d}^3x \\, \\mathrm{d}^3v$ \n",
+    "\n",
+    "$$\n",
+    "\\mathrm{d} N(\\mathbf{x}, \\mathbf{v}, t)\\propto f(\\mathbf{x}, \\mathbf{v}, t) \\mathrm{d}^3x \\, \\mathrm{d}^3v\n",
+    "$$ \n",
+    "\n",
+    "$\\rightarrow$ Mit geeigneter Normalisierung beschreibt $f(\\mathbf{x}, \\mathbf{v}, t)$ eine Wahrscheinlichkeitsfunktion."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
     }
    },
    "source": [
@@ -7320,7 +7327,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "notes"
     }
    },
    "source": [
@@ -7336,7 +7343,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "notes"
     }
    },
    "source": [
@@ -7353,7 +7360,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "notes"
     }
    },
    "source": [
@@ -7400,23 +7407,13 @@
    },
    "source": [
     "## Die kollisionslose Boltzmann-Gleichung\n",
-    "Somit erhalten wir die **kollisionslose Boltzmann-Gleichung**:\n",
     "$$\n",
     "   \\frac{\\partial f}{\\partial t}\n",
     "   + \\frac{\\partial f}{\\partial \\mathbf{x}} \\dot{\\mathbf{x}} \n",
     "   + \\frac{\\partial f}{\\partial \\mathbf{v}} \\dot{\\mathbf{v}}\n",
-    "   = 0.\n",
-    "   $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
+    "   = 0\n",
+    "   $$\n",
+    "\n",
     "Die **kollisionsfreie Boltzmann-Gleichung**\n",
     "beschreibt das Verhalten der **Phasenraumdichte** $f(\\mathbf{x}, \\mathbf{v}, t)$ von Körpern, bei denen Kollisionen zwischen den Teilchen vernachlässigbar sind."
    ]
@@ -7440,11 +7437,11 @@
     }
    },
    "source": [
-    "Zeitliche Entwicklung der Phasenraumdichte $f(\\mathbf{x},\\mathbf{v})$ entlang eines Orbits:\n",
+    "Zeitliche Entwicklung der Phasenraumdichte $f(\\mathbf{x},\\mathbf{v}, t)$ entlang eines Orbits:\n",
     "$$\n",
     "\\frac{\\mathrm{d}f}{\\mathrm{d}t} = \\frac{\\partial f}{\\partial t}\n",
     "   + \\dot{\\mathbf{x}} \\frac{\\partial f}{\\partial \\mathbf{x}}  \n",
-    "   + \\dot{\\mathbf{v}} \\frac{\\partial f}{\\partial \\mathbf{v}}\n",
+    "   + \\dot{\\mathbf{v}} \\frac{\\partial f}{\\partial \\mathbf{v}} = 0\n",
     "$$"
    ]
   },
@@ -7452,7 +7449,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "notes"
     }
    },
    "source": [
