--- a/lehrprobe.ipynb
+++ b/lehrprobe.ipynb
@@ -450,7 +450,7 @@
    "source": [
     "## Theorie des Mehrkörpersystems\n",
     "\n",
-    "Gravitatives Mehrkörpersystem mit $N$ Sternen der Masse $m$ im Hamilton-Formalismus:\n",
+    "Gravitatives Mehrkörpersystem mit $N$ Körpern der Masse $m$ im Hamilton-Formalismus:\n",
     "\n",
     "\\begin{equation*}\n",
     "H = \\sum_{i=1}^{N} \\frac{p_i^2}{2m} - Gm^2 \\sum_{i=1}^{N} \\sum_{j=1}^{i-1} \\frac{1}{|\\mathbf{q}_i - \\mathbf{q}_j|}\n",
@@ -1897,7 +1897,7 @@
    "source": [
     "## Eingeschränktes Drei-Körperproblem\n",
     "\n",
-    "Im Falle zweier massereicher Objekte (z.B. ☀️ und 🪐) und eines Testkörpers (💫) ist das Drei-Körperproblem analytisch lösbar."
+    "Im Falle zweier massereicher Objekte (z.B. ☀️ und 🌍) und eines Testkörpers (🛰️) ist das Drei-Körperproblem analytisch lösbar."
    ]
   },
   {
@@ -7289,7 +7289,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "Sei $\\mathbf{w}=(\\mathbf{x}, \\mathbf{v})$ der Phasenraumvektor."
    ]
@@ -7416,6 +7420,19 @@
     "\n",
     "Die **kollisionsfreie Boltzmann-Gleichung**\n",
     "beschreibt das Verhalten der **Phasenraumdichte** $f(\\mathbf{x}, \\mathbf{v}, t)$ von Körpern, bei denen Kollisionen zwischen den Teilchen vernachlässigbar sind."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<div class=\"alert alert-block alert-warning\"> \n",
+    "⚠️ Die kollisionsfreie Boltzmann-Gleichung oder auch Vlasov-Gleichung ist grundlegend für <b>alle</b> kollisionslosen Systeme!\n",
+    " </div>"
    ]
   },
   {
@@ -10857,7 +10874,7 @@
    "source": [
     "## Selbstgravitierende Systeme\n",
     "\n",
-    "Die Dichte der Sterne, $\\rho(\\mathbf{x}, t)$, ist die Quelle des Potenzials, $\\Phi(\\mathbf{x}, t)$."
+    "Die Dichte der Körper, $\\rho(\\mathbf{x}, t)$, ist die Quelle des Potenzials, $\\Phi(\\mathbf{x}, t)$."
    ]
   },
   {
